# opencv_projects

./: README.md  main.cpp
multiple_videos/: CMakeLists.txt  main.cpp
